fixed video player alignment for mobile

--- a/src/app/features/tournaments/tournaments.component.scss
+++ b/src/app/features/tournaments/tournaments.component.scss
@@ -43,6 +43,12 @@
         z-index: 2;
         opacity: 1;
     }
+
+    @media screen and (max-width: 600px) {
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+    }
 }
 
 .video-button {
